overflow fix, single work fix in mobile view

--- a/_sass/futurefiction.scss
+++ b/_sass/futurefiction.scss
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   justify-content: space-around;
-  background-image: url(img/resize1.jpg);
+  background-image: url(img/citygirl.jpg);
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
