--- a/_sass/normalize.scss
+++ b/_sass/normalize.scss
@@ -14,10 +14,9 @@
 html {
   width: 100%;
   height: 100%;
-  font-family: Helvetica, Arial, Sans-Serif;; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-
+  font-family: Helvetica, Arial, Sans-Serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 /**
